--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
     </div>
       </nav>
 
-          <div class="iPhone">
-         <img src="./images/iPhone 12 Pro.png" alt="iPhone">
-            </div>
 
-
-            
+         
+              <div class="container text-center">
+                <div class="row align-items-start">
+                  <div class="col">
+                    <img src="./images/iPhone 12 Pro.png" alt="">
+                  </div>
+                  <div class="col  heading">
+                 <h1> Date On <br> Easy Mode </h1>
+                  </div>
+                </div>
+              </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
